# ChangeLog for app-leechcraft/lc-lmp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-lmp/ChangeLog,v 1.13 2014/04/10 17:58:17 maksbotan Exp $

*lc-lmp-0.6.65 (10 Apr 2014)

  10 Apr 2014; Maxim Koltsov <maksbotan@gentoo.org> +lc-lmp-0.6.65.ebuild:
  Bump LeechCraft to 0.5.65, thanks to 0xd34df00d.

  03 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> lc-lmp-0.6.60.ebuild:
  x86 stable wrt bug #500914

  02 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> lc-lmp-0.6.60.ebuild:
  amd64 stable wrt bug #500914

*lc-lmp-0.6.60 (08 Jan 2014)

  08 Jan 2014; Maxim Koltsov <maksbotan@gentoo.org> +lc-lmp-0.6.60.ebuild:
  Bump to LeecChraft-0.6.60 release, thanks to 0xd34df00d.

  24 Sep 2013; Maxim Koltsov <maksbotan@gentoo.org> lc-lmp-9999.ebuild,
  metadata.xml:
  Add libguess dependency and useflag to lc-lmp-9999, thanks to 0xd34df00d

*lc-lmp-0.6.0 (24 Sep 2013)

  24 Sep 2013; Maxim Koltsov <maksbotan@gentoo.org> +lc-lmp-0.6.0.ebuild:
  Bump LeechCraft to 0.6.0

  16 Aug 2013; Maxim Koltsov <maksbotan@gentoo.org> lc-lmp-9999.ebuild:
  Drop phonon dependecy and USE flag, add media-libs/gstreamer dependency.
  Thanks to 0xd34df00d

*lc-lmp-0.5.99 (18 Jul 2013)

  18 Jul 2013; <maks@gentoo.org> +lc-lmp-0.5.99.ebuild:
  Bump app-leechcraft/lc-lmp to 0.5.99, thanks to 0xd34df00d

*lc-lmp-0.5.98 (03 Jul 2013)

  03 Jul 2013; Maxim Koltsov <maksbotan@gentoo.org> +lc-lmp-0.5.98.ebuild:
  Bump LeechCraft to 0.5.98, thanks to 0xd34df00d.

*lc-lmp-0.5.97 (11 Jun 2013)

  11 Jun 2013; Maxim Koltsov <maksbotan@gentoo.org> +lc-lmp-0.5.97.ebuild:
  Bump LeechCraft suite to 0.5.97, thanks to 0xd34df00d.

*lc-lmp-0.5.96 (26 May 2013)

  26 May 2013; Maxim Koltsov <maksbotan@gentoo.org> +lc-lmp-0.5.96.ebuild:
  Bump LeechCraft suite to 0.5.96, thanks to 0xd34df00d

*lc-lmp-0.5.95 (02 May 2013)

  02 May 2013; Sergey Popov <pinkbyte@gentoo.org> +lc-lmp-0.5.95.ebuild: