@@ -1,0 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+EBUILD lc-eleeminator-9999.ebuild 441 SHA256 ea02fad66e17a3545444a36d759660de45c65b7c7978bf2aff31ba54c170c4d6 SHA512 65334205a2d2b56cce49fde242daec01eb6d8bc6664cfe2c6079d896cb2a1086de91591cff1931972c54d8fb0ebdd6fe5587abaa812fb113fef05d08a4d8f3fa WHIRLPOOL 7cf14a34923c1e22b7627d0b8786293218c476918dbcea9636e42ea7acc6772aacb08ed2243cc89e0cf034ef57ac22a273136a8955d72383f1c224364feba877
+MISC ChangeLog 396 SHA256 cfd387e23f76368b4a429057cae3c3fcf51e6eb7de77632741415307f03e4d1f SHA512 5f01059a3b7e10ec61cc6493976d86f4f7287f4909cfc72b731d749f6433d3f44533f198aeea386b7c16a3db43e8e6a57d814834cfca5571c1d8aaad35849126 WHIRLPOOL 19b8581157ddb3766ca3d82c128be1583f7b58f5ff21c99d3819e593e8e6e3ffe795e5087d8d0eef97e49e618121f939fef6ed4f3ce11f94726511f32089b00f
+MISC metadata.xml 164 SHA256 d3d50c47cc72568dcc457fe11ddfc6849ba6572bc2d581aad1deac910ee1d488 SHA512 ce478accd06c9c530d86b3ca8abaf3680428a7ab07ed8bb5b78e60c7e3240c3be349993f73e2ef904642efec5cd9c8abb7196675b46723103290ef9ab5d1cc10 WHIRLPOOL 4c2d59059bc69ff27c720b093f582968e2778d23875e0f7d3edba0ec6634e1b50e7403974c4a32638eeaae4d7baf45ca163e5e80f5bd692590b7d075882d51f0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQEcBAEBCAAGBQJTe4sMAAoJEAmJmMX429reIs0H/0Ven/NBQ0vbivN6sca1bK/H
+VVSyREz6RK6QfDvCwOUXEYw9fW36FuNa5L3THMT5p9taqYdYCVdsg87n+1hZ2/dT
+moybRAvI2DE+ZqoZ0cGms0w5XFJk+YHaHCgikmnnYXDzorQwLkjkSfhiPGM69CW/
+FH1y7nrEZXmAGQHp+Hievcb5Crg44UifIWKL8pbKrhjaaxXmyh93GilWEhLA+Xoq
+AylgmsOc32zJMDW55EmX5QCvO7sSRMgezjuragXJ50sIlkjhKfgYxU9g2RahG7EX
+9gxMAtpOv1UMhjBFmPpz38K/iDpyy0ewRWCCMfZD+6fj+jGxtSDm6t1QHpNu4zU=
+=iIPX
+-----END PGP SIGNATURE-----
