@@ -5,17 +5,17 @@ DIST leechcraft-0.6.60.tar.xz 5089252 SHA256 669c2325235c3c49dfc9a30d38c1ad08c0a
 DIST leechcraft-0.6.65.tar.xz 5067580 SHA256 b821fb8716b3ba04862bbb358a738609ead84cd9c86b569fe31c712b48c2a7fd SHA512 94e3cfa42bea572cb2feeaf4c7153c8d7e08e0597d447db5033b72222cea67370e8948d0dd0e2b89585583a88b4ee3df7b32d72dcd624d383e79b9472ceffe30 WHIRLPOOL bc589f46c89351328e25e6e32febdcba8ead639a8d1daf18df7352372d66fb8f8e7e5bbef02d49b6a00a7f5ffa15d66699b79cc73f64ea1bf8b59949fcd81b8a
 EBUILD lc-lmp-0.6.60.ebuild 944 SHA256 0d0a2a4f65b7ae15f72403a1e33b7c2b22f40c1f7b6d06e561ca4182dd458ff0 SHA512 ed15f8b831747fb6a3e8ffbc7fed8cd2a53668eba7e31e16977bf294df32cf8fb1209f970971beeebce4734c5f5dcc94d58d80c4d9d96812214cccf0fd72bd1c WHIRLPOOL 8c1857a2f3a973f1db2c4e1408e45d2bd7b8758577c5fadc6b1cfc9bfc20c2040e39bd74c32e144990edbdcf69509124d2136adfda318b6bc1d5311bde30410b
 EBUILD lc-lmp-0.6.65.ebuild 949 SHA256 6c9933319a28d1d67aa9566f9532f00b53931e9f40657c063424c841ddfa35b5 SHA512 094be79a91de1eda1898f5323cd92d48815e136cae9658927d10c9732359bdc9129929a1f7c731e3560236c622e278fbf232bf708537b43c01c8d2109360e53e WHIRLPOOL 7963078f1f45327ab8d0500df73ec4f282bb4ac8831f91507ad3f74baa52e8700402fce88a6c90d3e1643e4ac33cf4b18bc9feda15c8ef9014bc6880ba135269
-EBUILD lc-lmp-9999.ebuild 935 SHA256 ef78c34e85c076ccebc345a8391e7d1a5b97e211774a0b9d6ddc359e9ffb1b50 SHA512 c3e7f684c475dbde624743b509fd7f8fe98cbf579d259fcd742fb964c3c19bc4743fa87abf718f68f6da825cbd2f90f49560e208d826b8d196be7ef4d7b28006 WHIRLPOOL 9c0bb0f9bf826e560b683ed5417def5a7cf6c5f344effaf0d1d331bf8bbee22cc18a13015708e4bc83dbfd1bca9c3f6b6b32f9fb8e37c0cf27618ca337c49a6a
-MISC ChangeLog 7356 SHA256 d66831ca5f55c05222f7f311fcc6674a1ccca0f4df8ab066c37e7ecaaee3d6ea SHA512 3e1e7931614044fdbae981c18b7e75a970154f1378ebcf5287af00d572e66bbb6bf128300d2c6680c5b4d695eb2bebfc7fe89256c9a35aa87327cb3ec7b81cf1 WHIRLPOOL 459e8b9fab6b268404e74ef3510005ca259b8b66f121c8d3efd5ada7b4621599dce02bddb98c06b381457ae203bc8514f621662c914c914c07b0fc9a66e61976
-MISC metadata.xml 465 SHA256 816f7e206a0c3aa461b3875e8f8b1742e4cade3572f3d7207d84ef9741b3bc61 SHA512 54a0ad8864f295c17268bd3256921960178142475c81b6df7a974bb4660a7422fe64975799ad1e44a5ee670a7179b390cbdb8284689c6b3795e0f9182bcd420a WHIRLPOOL 94fb894fa339f9ef7df892e746c992dbfe380e120bd0f2d31c1855c4996a59141acc30faa5443ad84d5e8ff6e5ed56830e0c38426f49dd8a6e2e49dac8827d23
+EBUILD lc-lmp-9999.ebuild 986 SHA256 9e20bef425af68bd5d7dd1f36c8b05beac003cdc16e493d549636bd11681a843 SHA512 9058887da3bac023a4312948a0ea866a47f3004334b6cf03414a61c5c2376a114940f2241175d65072fd6681a584d28bea19e8ce0d292c31097844f3e69a96b7 WHIRLPOOL f1832af3e84cfe113f4386e62620463360c89c4a90ea5a137f1c54b8d7c017627f10fb48cac4f833aeca354eff690facf6d0448a17f8f675dcc121f05fa246e9
+MISC ChangeLog 7481 SHA256 b2442dec81b790069d99d2be538ceb49228c5faa77195acacb6e22fb3e869501 SHA512 41838c46fc2055a5d14cdef19899718ba006a9fcc1262220542b8ae42cb164d431e16520bef62a390e0992fd515ebae34bbe1a17f125991d1a62a9d96ee92018 WHIRLPOOL 41a64dbb435e9f458a14414659e7e1d382859a883c3328e4cd5480711ba3da85cab2442f3a4128780a8e632fc87a4b112e7dccee96715db1b10594d925ad71c9
+MISC metadata.xml 533 SHA256 87442f6dba1568871b6d7bb8f694ef9ef4d942c8fb494aec076ad0816d48f22a SHA512 48ddc79583782dbef975cc46530f74dbe91d10bcbd093f86cf3489bb970869286e6ea387660fdb5894f353bd6d3687c063f2d4176565ce3ee7ed7201a9fe0057 WHIRLPOOL b8ea0e73eaacf2b669f10c68536d5eb55c74abd7ac77a49bc48236420928f783997b597945f3ff4edfba100ed4b063cc8320a8af333e64fa693567fe4a8eaaaf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTXo6bAAoJECo/aRed9267p2wH/1YVOb8jmWbC6ejcdNpIaZCE
-mWepTKdcgc0xk2akbvK3ZqouQqEvGJQdYJHFEnjeH3u6ANTSDouYk6VCKl6KposN
-7Vu5xZzf9QnqxP0kOrDjhkk16/HZe/xiR/yRUL6SaizXgOyPX0YkLLxjt0iQmZlB
-bzgB0gVr5KtelMS7xw5BLTTlCUA+BvUMmfZwWSzOwo0zlMga3N0TWsXAx7999yHx
-TnbqS2ss7VxiGoENABlXppgg4r8cOJeVTCdhHCY2pYUniHBtOvIAJuyH/u/35MvY
-0eTx8VOBi7M/zOSbRHXL9mPAyBx4+clyNTvfZlHLhaR/wd3pl11fdMj8z/UQK+g=
-=JfOD
+iQEcBAEBCAAGBQJTe4pSAAoJEAmJmMX429rezYAH+QFFrcBBYcDnhxo0mtjlPW3k
+Kad+jWQ28NFbR97HP1ETMIXnE2C0Puqud8wkoUFnQEjClg12a2LnBaXi3oJv0Pkw
+9XgcUd7Wy649xq2jyED65ulEakTMrFssuOaMO6jIoONfmtbbJNvqM1mUwVN81tX4
+4M9KZaPbHgTbrhQciLIT5lqwLsCt2gRbto8mWVxYRTOOzYmclbbWKGzOxF2OCRhY
+lxFYz3Pvob7oH7J5aT3JC2m1MtVJsw7yOhp8DLVrIFdMsmDOQMZA28JGwJmcOcIx
+ML/+At+d1e73BSJxZzFNdB5y3LkRQGnx6zdM3EJOOooM0yOlOZyebHtmdIqQj14=
+=UVnF
 -----END PGP SIGNATURE-----
