@@ -10,17 +10,19 @@ DIST hugin-2012.0.0.tar.bz2 11658665 SHA256 63dfd88ac90d3af4b958111db951bb7fbf2c
 DIST hugin-2013.0.0.tar.bz2 11247583 SHA256 484e1ed58fa6fe4bae1f423967101549345bcca2653b992afbc0ed9ec0dbebd5 SHA512 dea1682c16991441278a881e5e0916ffdbe8e0012f0dcf45875ee97fe7dc698d4d98037916e63c9a651557adc45c89e4e350ad976fec020562bc17a31f608a86 WHIRLPOOL c3d8e175ff23c8761815406039a8027da327925f07a18b00bde4d457228a2562f30f5df3fb5dff17f8003f985d7b51ec39d557a064c7e228b09ff73473c41e6a
 DIST hugin-2014.0.0_rc1.tar.bz2 11310892 SHA256 cb5b6f47e3dc55595be592f66c91c71c0afdab0a57da71f8ff21d954108e54f3 SHA512 53f984ca383d5e2360dc117766eb4d8d2eb52b25b2301ca1df5af3aede59717195604d8bb9690db7604b6a4dd046ac820e10e996aaaf4dedc52655404b0682c4 WHIRLPOOL 89a924e35dba64ed20716f5eefb0ae51412cd15551e83fe720ca21e0267db2f685942d143d9c8408ea89ff1e20133e05ae52f6a020ffe7a40e0884980bbd66a2
 DIST hugin-2014.0.0_rc2.tar.bz2 10971998 SHA256 94b801899257f453f4ee0b51b762967c8a42ffd64345cb97a031142b35537e62 SHA512 f69120f7ababde9462e6afa9119f20bd8b7ddace443160411b84963bb985f15b3e4c9c34a255d64574a1234b2a33b6a39e1220d0e64ad0a66520d7a935fcd966 WHIRLPOOL eb26a333ca1a48238f03ccac216fc9fc3bae36223312eeeffbb8ee4ddca9011d4ceafa19d3b34ed0b9715336b9c529c0a08dca7ff68ae0e4d3ee8862dc9955ae
+DIST hugin-2014.0.0_rc3.tar.bz2 10970434 SHA256 85d9b5422c0b32e3f369820628358fb4a0ff2f2ccc44b5dbee4e937f084ef83a SHA512 6cad780ed5024f7af26b99d26cbf3e2ed47fdd0c82de57307d33295ae20a7e89a9cb5f9789e2d360c959caf1099fc3e0e243a647f88586a48cc1690757eb2744 WHIRLPOOL eecaa22051093fc6fb6f36cf7f6b5d59fdd8cd4259a186c15f75617ae10ba1d000fd48357b48054be523522e09fea66450fd52e22732516baaa4ce0282b0d82e
 EBUILD hugin-2012.0.0.ebuild 1648 SHA256 b49e5866a8ff84c4f5ff4781faa30d94d7fe945b29a217e663c66bc02b7cced6 SHA512 ff7bd929200b93a13dced894633370a5e1abe11d58e78d2001e71832342fe10478bd9c7d9c35da252b8520fd845d960fca1823e053e5afc72d2519ca7b1bc730 WHIRLPOOL 106f4eeed3afa6c4d4ee7c181ce8a2989e88e61511401105d36bc67544901598f31b882d0547e31db89fe5daeb249e435223ddb9985bc274b7c73864daba9421
 EBUILD hugin-2013.0.0-r1.ebuild 2016 SHA256 32bf287de5dc2f38014833358c0cc22edebddea3d5c1002a5a0ae78340471752 SHA512 773ce13fc76b90447bb3140c5aa6c360c4e5868ed29988996211fb009fa78fe62c3dd00461fc022f32713a9c8fcb4495c8bbd24a08584fbae4c4b089c10a96df WHIRLPOOL cdf69d3eaf5ca8590b7a838c1b854b70401913739a177ae0c23460a0e9439eb6283f4923052d3547014e25bf724e341e0cdaf5c93afc27605f4d824f3d751749
 EBUILD hugin-2014.0.0_rc1.ebuild 1966 SHA256 a4524a81bb60fc681f493f7b59ee61d199ef81fa778010533a7c1559ae6b4cec SHA512 1a49387f5be7d6a3a6494f46848def61ca816090fa84de688989e0a5c91e799cdf1c0571e87c4080049e3b7ee5c26c5213dcf083f05de3ebee15165812271040 WHIRLPOOL 60ef7f06146a0362b4869abac54a423e2ffe5f6c4bfba6cc35e5bb7f231a1d3fbf8cb5b65173e49e9fa797950cdb2e3c6f62795b9e61fa21b08dbab96cc77ad8
 EBUILD hugin-2014.0.0_rc2.ebuild 1966 SHA256 b8bb49e3a943d8cbffe2312c11acc48004f1cff612454ac4a32300a407b8e42a SHA512 dd74d5539096843eeed98095be9b02bb5c25592c216c6a7804499beaf839193be0be154e37b11f3f6d54ba693070f68f4920e7acf51ec08e29fb01588338ca07 WHIRLPOOL d9da9ccbbc905aaf3597e334390c6cceb44a171a39339a6a4ca74dc1143e88125f42624d5c0e2e0c3e050459fd0fcef6bd60ced37d0e734e7ed6b05291f4ed09
+EBUILD hugin-2014.0.0_rc3.ebuild 1966 SHA256 1aaf8704092cb01e3939d2590aa80de71cf986a3e4d577ba8a0dab5d47966cb8 SHA512 62c8b0f4fbf3cf19e33517087104dcc02c58faef951f414a11d3b86573f38034a9e9065f00586ef6f89dbc71782876461258070f771aeb32f692a8328e81c5d9 WHIRLPOOL 144971e150d5e1acf518c84d4dfba2f3b137e4037c63997cab2100582dba3e725f9f2c0ed916f296f8d26430a0bf765ade2c020f465189fa438bbdb76fad4e62
 EBUILD hugin-9999.ebuild 1998 SHA256 f5ef9355806eaed940e3a820cab87c55d99016a67ee1fdfeaf8b6ce969ca5a31 SHA512 e633c703e88d6c5e96e8f602d088d906f3c7c58a13d5672853eca3382133bafc31b03204ed5f78191ee8ece6ad44bb9f8d128c874edf715e7e0b493d1ec16d6f WHIRLPOOL 6258802424c0b048428966609472085f89b94722ef5ac6d6f4622bc20b30595db5d9b780f973e36913d2c3167acd13c0ee8f3ecc4902f9509520748928179d27
-MISC ChangeLog 23329 SHA256 69f2f3fb5a86fb7554f0509acb80ec2e1e9cd731013359b470397253d38313bf SHA512 5789bbde516600d313af0ca9a1a62452d72de8aaee8ccb41cad1c807c7bfcff8a063b1b966b57500ed56d76a0f94f479f0023ce7366a8a957c6dde97174b7ca2 WHIRLPOOL 2e82e2d27bbbbdc5e64c87414437e8bd995a43816396b7441e13d173febfd7bd36403ae104f90c8d5ee339829e3826c6013e240b8cf9a2a44c7699c52f7a44f3
+MISC ChangeLog 23456 SHA256 9e02c2afa01ec03e0791590fefab16917b63ba2a2b4da2a20eb149bf93e5ccfb SHA512 6f648f577241e3e318a22d8040ee177258694c89c20b4f20fb7cd237dcb19647fe727b21f3a997e9c5c2915b3652da4b4eb12e7e940557ee32b74b24bfbb0436 WHIRLPOOL b33bee4c0bbc83494f4dbb21d0b445cac3283a9ade84d57b4f6f0baa64345562476d3ab59aa5d306a565bcbd5ecf3b7a06494d0dc22a838667a3e73131221d4e
 MISC metadata.xml 395 SHA256 1e88681d08863b52f3ae17f149901c3d84b6c6197913f7538d17572b33adbf9b SHA512 52848e953af2d3a398f9309a8af40261df0bb78365a3065f805ad06fbc40bea2a44b23ca70aa898b7dbb39a1c2e1309f036762de81d66824bdea09f767039a21 WHIRLPOOL dbdfadbbd20f6acd3961b786bb7bc5e57fd8fd954373cf4a645a008ddaf9273406072cc5ab1497ca1bdefbb77834996d8210c4d9f8cf1a716a7a788b29431684
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNc8dcACgkQkKaRLQcq0GLc3gCgm8y8mnG8TYR1wcAq5FTYGfFx
-5/0AoIsw/I+lDUKIqf5HtPcnmnFpEsQb
-=qIYX
+iEYEAREIAAYFAlN7j0UACgkQkKaRLQcq0GJQGwCdHfAdKK7cLmM1WqQoHiecWAjL
+aEEAn35R/2nSMG5FfpLfbcwJJFSVH+B9
+=rH9d
 -----END PGP SIGNATURE-----
