@@ -1,0 +1,11 @@
+DEFINED_PHASES=compile configure install prepare pretend test unpack
+DEPEND=~app-leechcraft/lc-core-9999 x11-libs/qtermwidget sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-vcs/git
+DESCRIPTION=Embedded LeechCraft Terminal Emulator
+EAPI=4
+HOMEPAGE=http://leechcraft.org/
+IUSE=debug
+LICENSE=Boost-1.0
+RDEPEND=~app-leechcraft/lc-core-9999 x11-libs/qtermwidget
+SLOT=0
+_eclasses_=cmake-utils	412d9e2d2c6f85f46dad595e68570d21	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	git-2	2027b81a576527fa16bece425941e094	git-r3	e83b3dde426430f34178059a8de5299d	leechcraft	e0ec4b74ef98adeb1a9696617a379c7f	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=bad72b527034e13a46626092490729dc
