@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=!!dev-util/cocom app-arch/zip dev-cpp/tclap >=dev-libs/boost-1.49.0-r1:= dev-libs/zthread >=media-gfx/enblend-4.0 media-gfx/exiv2 media-libs/freeglut media-libs/glew:= media-libs/lensfun >=media-libs/libpano13-2.9.19_beta1:0= media-libs/libpng:0= media-libs/openexr:= media-libs/tiff sys-libs/zlib virtual/jpeg x11-libs/wxGTK:2.8=[X,opengl,-odbc] lapack? ( virtual/lapack ) sift? ( media-gfx/autopano-sift-C ) virtual/pkgconfig python? ( python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_single_target_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2 ) python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,python_single_target_python2_7(+)?,python_single_target_python3_2(+)?,python_single_target_python3_3(+)?] >=dev-lang/swig-2.0.4 ) sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=GUI for the creation & processing of panoramic images
+EAPI=5
+HOMEPAGE=http://hugin.sf.net
+IUSE=lapack python sift debug linguas_cs linguas_da linguas_de linguas_en_GB linguas_es linguas_eu linguas_fi linguas_fr linguas_hu linguas_it linguas_ja linguas_nl linguas_pl linguas_pt_BR linguas_ro linguas_ru linguas_sk linguas_sv linguas_zh_CN linguas_zh_TW python_targets_python2_7 python_targets_python3_2 python_targets_python3_3 python_single_target_python2_7 python_single_target_python3_2 python_single_target_python3_3
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-2 SIFT
+RDEPEND=!!dev-util/cocom app-arch/zip dev-cpp/tclap >=dev-libs/boost-1.49.0-r1:= dev-libs/zthread >=media-gfx/enblend-4.0 media-gfx/exiv2 media-libs/freeglut media-libs/glew:= media-libs/lensfun >=media-libs/libpano13-2.9.19_beta1:0= media-libs/libpng:0= media-libs/openexr:= media-libs/tiff sys-libs/zlib virtual/jpeg x11-libs/wxGTK:2.8=[X,opengl,-odbc] lapack? ( virtual/lapack ) sift? ( media-gfx/autopano-sift-C ) media-libs/exiftool
+REQUIRED_USE=python? ( python_single_target_python2_7? ( python_targets_python2_7 ) python_single_target_python3_2? ( python_targets_python3_2 ) python_single_target_python3_3? ( python_targets_python3_3 ) ^^ ( python_single_target_python2_7 python_single_target_python3_2 python_single_target_python3_3 ) )
+SLOT=0
+SRC_URI=mirror://sourceforge/hugin/hugin-2014.0.0_rc3.tar.bz2
+_eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	cmake-utils	412d9e2d2c6f85f46dad595e68570d21	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	python-single-r1	82a55861314bbcedaf1e08ed4dd651b3	python-utils-r1	e544c60078c7fa0939091b4c33e27450	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f	wxwidgets	6d6eec2685256d35511e7b6d5461bec9
+_md5_=599d25491f2368dc06e06c71ba5c61ca
