@@ -1,0 +1,9 @@
+# ChangeLog for app-leechcraft/lc-eleeminator
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-eleeminator/ChangeLog,v 1.1 2014/05/20 17:04:26 maksbotan Exp $
+
+*lc-eleeminator-9999 (20 May 2014)
+
+  20 May 2014; Maxim Koltsov <maksbotan@gentoo.org> +lc-eleeminator-9999.ebuild,
+  +metadata.xml:
+  Add lc-eleeminator plugin
