@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/hugin
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/hugin/ChangeLog,v 1.145 2014/04/27 11:54:29 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/hugin/ChangeLog,v 1.146 2014/05/20 17:13:58 maekke Exp $
+
+*hugin-2014.0.0_rc3 (20 May 2014)
+
+  20 May 2014; Markus Meier <maekke@gentoo.org> +hugin-2014.0.0_rc3.ebuild:
+  version bump
 
 *hugin-2014.0.0_rc2 (27 Apr 2014)
 
