@@ -1,6 +1,10 @@
 # ChangeLog for app-leechcraft/lc-lmp
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-lmp/ChangeLog,v 1.13 2014/04/10 17:58:17 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-lmp/ChangeLog,v 1.14 2014/05/20 17:01:15 maksbotan Exp $
+
+  20 May 2014; Maxim Koltsov <maksbotan@gentoo.org> lc-lmp-9999.ebuild,
+  metadata.xml:
+  Add fradj use flag to lc-lmp-9999
 
 *lc-lmp-0.6.65 (10 Apr 2014)
 
